# HousingPriceNeuralNet

./: LICENSE  Makefile  Pipfile  README.md  pyproject.toml
data/processed/: processed_train_data.csv
housing_price_neural_net/: __init__.py  dataset.py  features.py  plots.py
housing_price_neural_net/modeling/: predict.py  train.py
models/: model.pth  val_data.npz
notebooks/: 1.0-mb-evaluate-model.ipynb  1.0-mb-housing-price-data-exploration.ipynb.ipynb
