[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "housing_price_neural_net"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Maksymilian Bilski, Miko\u0142aj Ro\u017cek" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=Implementation of a neural network for real estate price classification based on property attributes."

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["housing_price_neural_net"]
force_sort_within_sections = true


